// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test run all tests 1`] = `
Array [
  "[42m[37mPASS[39m[49m [32mBasic[39m",
  "[42m[37mPASS[39m[49m [32mTable equality[39m",
  "",
  "Total tests: 11",
  "Failed tests: 0",
]
`;

exports[`test run all tests 2`] = `undefined`;

exports[`test run all tests that fail 1`] = `
Array [
  "[41m[37mFAIL[39m[49m [31mFailures[39m",
  "[1m[31m    • not to be falsy[39m[22m",
  "[31mnot expecting false to be falsy[39m",
  "",
  "[1m[31m    • not to be nil[39m[22m",
  "[31mnot expecting nil to be nil[39m",
  "",
  "[1m[31m    • tables equal[39m[22m",
  "[31mexpecting values to match[39m",
  "",
  "{	[\\"number\\"] = 2	[\\"subtable\\"] = {		[\\"a\\"] = true",
  "[31m[-] 	}[39m",
  "[32m[+] 		[\\"b\\"] = false[39m",
  "",
  "[31m[-] 	[\\"text\\"] = \\"2\\"[39m",
  "[32m[+] 	}[39m",
  "[32m[+] [39m",
  "[32m[+] 	[\\"text\\"] = \\"3\\"[39m",
  "}",
  "[1m[31m    • to be[39m[22m",
  "[31mexpecting 2 to be 4[39m",
  "",
  "[1m[31m    • to be falsy[39m[22m",
  "[31mexpecting true to be falsy[39m",
  "",
  "[1m[31m    • to be nil[39m[22m",
  "[31mexpecting true to be nil[39m",
  "",
  "[1m[31m    • to be truthy[39m[22m",
  "[31mexpecting false to be truthy[39m",
  "",
  "",
  "Total tests: 7",
  "Failed tests: 7",
]
`;

exports[`test run all tests that fail 2`] = `[Error: 7 tests failed.]`;

exports[`test run tests with cctools 1`] = `
Array [
  "[42m[37mPASS[39m[49m [32mcctools.fn[39m",
  "",
  "Total tests: 4",
  "Failed tests: 0",
]
`;

exports[`test run tests with cctools 2`] = `undefined`;

exports[`test run tests with hooks 1`] = `
Array [
  "[42m[37mPASS[39m[49m [32mHooks[39m",
  "",
  "Total tests: 1",
  "Failed tests: 0",
]
`;

exports[`test run tests with hooks 2`] = `undefined`;

exports[`test run tests with print 1`] = `
Array [
  "[42m[37mPASS[39m[49m [32mPrint[39m",
  "    • print() in print captures global output",
  "works in a hook",
  "",
  "    • print() in print toSnapshot array",
  "works in a hook",
  "",
  "    • print() in print toSnapshot array",
  "{",
  "	[1] = 1",
  "	[2] = 2",
  "	[3] = 3",
  "	[4] = \\"some string\\"}",
  "",
  "    • print() in print toSnapshot mixed",
  "works in a hook",
  "",
  "    • print() in print toSnapshot mixed",
  "{",
  "	[1] = 1",
  "	[2] = 2",
  "	[3] = 5",
  "	[\\"string\\"] = \\"str\\"}",
  "",
  "    • print() in print toSnapshot table",
  "works in a hook",
  "",
  "    • print() in print toSnapshot table",
  "{",
  "	[\\"number\\"] = 2",
  "	[\\"string\\"] = \\"str\\"",
  "	[\\"subtable\\"] = {",
  "	",
  "	[\\"exists\\"] = true",
  "	}}",
  "",
  "",
  "Total tests: 4",
  "Failed tests: 0",
]
`;

exports[`test run tests with print 2`] = `undefined`;

exports[`test run tests with traceback 1`] = `
Array [
  "[41m[37mFAIL[39m[49m [31mTraceback in hooks[39m",
  "[1m[31m    • Traceback in hooks.afterAll[39m[22m",
  "[31mError in hook Traceback in hooks.afterAll: traceback.test.lua.tmp.bundle:110: Custom error in afterAllstack traceback:[39m",
  "[31m	startup.lua:681: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:110: in function <traceback.test.lua.tmp.bundle:109>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:670: in local 'runAll'[39m",
  "[31m	startup.lua:762: in field 'run'[39m",
  "[31m	startup.lua:892: in function <startup.lua:885>[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	startup.lua:929: in function <startup.lua:906>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:70: in local '__define__'[39m",
  "[31m	startup.lua:906: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "[1m[31m    • Traceback in hooks.afterEach[39m[22m",
  "[31mError in hook Traceback in hooks.afterEach: traceback.test.lua.tmp.bundle:106: Custom error in afterEachstack traceback:[39m",
  "[31m	startup.lua:681: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:106: in function <traceback.test.lua.tmp.bundle:105>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:670: in local 'runAll'[39m",
  "[31m	startup.lua:756: in field 'run'[39m",
  "[31m	startup.lua:892: in function <startup.lua:885>[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	startup.lua:929: in function <startup.lua:906>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:70: in local '__define__'[39m",
  "[31m	startup.lua:906: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "[1m[31m    • Traceback in hooks.beforeAll[39m[22m",
  "[31mError in hook Traceback in hooks.beforeAll: traceback.test.lua.tmp.bundle:98: Custom error in beforeAllstack traceback:[39m",
  "[31m	startup.lua:681: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:98: in function <traceback.test.lua.tmp.bundle:97>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:670: in local 'runAll'[39m",
  "[31m	startup.lua:746: in field 'run'[39m",
  "[31m	startup.lua:892: in function <startup.lua:885>[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	startup.lua:929: in function <startup.lua:906>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:70: in local '__define__'[39m",
  "[31m	startup.lua:906: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "[1m[31m    • Traceback in hooks.beforeEach[39m[22m",
  "[31mError in hook Traceback in hooks.beforeEach: traceback.test.lua.tmp.bundle:102: Custom error in beforeEachstack traceback:[39m",
  "[31m	startup.lua:681: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:102: in function <traceback.test.lua.tmp.bundle:101>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:670: in local 'runAll'[39m",
  "[31m	startup.lua:752: in field 'run'[39m",
  "[31m	startup.lua:892: in function <startup.lua:885>[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	startup.lua:929: in function <startup.lua:906>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:70: in local '__define__'[39m",
  "[31m	startup.lua:906: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "[41m[37mFAIL[39m[49m [31mTraceback in suite[39m",
  "[1m[31m    • [39m[22m",
  "[31mError in Traceback in suite: traceback.test.lua.tmp.bundle:91: Custom error in suitestack traceback:[39m",
  "[31m	startup.lua:844: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:91: in function <traceback.test.lua.tmp.bundle:89>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:836: in function 'describe'[39m",
  "[31m	traceback.test.lua.tmp.bundle:89: in function <traceback.test.lua.tmp.bundle:87>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	traceback.test.lua.tmp.bundle:49: in local '__define__'[39m",
  "[31m	traceback.test.lua.tmp.bundle:87: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	...[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "[41m[37mFAIL[39m[49m [31mTraceback in test[39m",
  "[1m[31m    • traceback[39m[22m",
  "[31mError in test Traceback in test.traceback: traceback.test.lua.tmp.bundle:121: Custom error in teststack traceback:[39m",
  "[31m	startup.lua:721: in function 'error'[39m",
  "[31m	traceback.test.lua.tmp.bundle:121: in function <traceback.test.lua.tmp.bundle:120>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:707: in local 'runTest'[39m",
  "[31m	startup.lua:754: in field 'run'[39m",
  "[31m	startup.lua:892: in function <startup.lua:885>[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	startup.lua:929: in function <startup.lua:906>[39m",
  "[31m	[C]: in function 'xpcall'[39m",
  "[31m	startup.lua:70: in local '__define__'[39m",
  "[31m	startup.lua:906: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	startup.lua:178: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	shell.lua:82: in function <shell.lua:62>[39m",
  "[31m	(...tail calls...)[39m",
  "[31m	shell.lua:591: in main chunk[39m",
  "[31m	[C]: in function 'pcall'[39m",
  "[31m	bios.lua:528: in field 'run'[39m",
  "[31m	multishell.lua:81: in function <multishell.lua:80>[39m",
  "",
  "",
  "Total tests: 2",
  "Failed tests: 1",
]
`;

exports[`test run tests with traceback 2`] = `[Error: 1 tests failed.]`;
